--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -47,6 +47,7 @@ p {
   border-color: black;
   padding: 50px 20px 20px 20px;
   margin-top: 0px;
+  margin-bottom: 0px;
   background-color: #999999;
   font-family: Helvetica;
   color: white;
