--- a/module3-solution/css/style.css
+++ b/module3-solution/css/style.css
@@ -10,7 +10,7 @@ body{
 .content{
 	padding: 10px;
 	position: relative;
-  
+
 
 
 }
@@ -65,12 +65,8 @@ font-size: 1.5rem;
 cursor: pointer;
 }
 
-button {
-  
 
-}
-
-.navbar-brand {
-  
-
+.navbar {
+ padding: 0px 20px 0px 20px;
+ border: 1px solid;
 }
