--- a/module3-solution/css/style.css
+++ b/module3-solution/css/style.css
@@ -11,11 +11,9 @@ body{
 	padding: 10px;
 	position: relative;
 
-
-
 }
 h1{
-	text-align: center;
+
 	font-size: 42px;
 }
 
@@ -69,3 +67,8 @@ cursor: pointer;
 .navbar {
  border: 1px solid;
 }
+
+.navbar-brand {
+ float: left;
+}
+
